--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,9 @@
     }
   },
   "env": {
-    "browser": true
+    "browser": true,
+    "jest": true,
+    "es6": true
   },
   "extends": [
     "eslint:recommended",
