--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "classnames": "^2.2.6",
     "lodash": "^4.17.11",
-    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
+    "react-intl": "^2.7.2",
     "react-slick": "^0.23.2"
   },
   "scripts": {
@@ -27,9 +25,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
+    "babel-eslint": "9.0.0",
+    "classnames": "^2.2.6",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "5.6.0",
     "eslint-plugin-react": "^7.11.1",
+    "jest": "^23.6.0",
+    "prop-types": "^15.6.2",
     "react-redux": "^6.0.0",
     "react-scripts": "^2.1.1",
     "redux": "^4.0.1",
