--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "lodash": "^4.17.11",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-intl": "^2.7.2",
-    "react-slick": "^0.23.2"
+    "lodash": "4.17.11",
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
+    "react-intl": "2.7.2",
+    "react-slick": "0.23.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,18 +26,18 @@
   ],
   "devDependencies": {
     "babel-eslint": "9.0.0",
-    "classnames": "^2.2.6",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
+    "classnames": "2.2.6",
+    "enzyme": "3.8.0",
+    "enzyme-adapter-react-16": "1.7.1",
     "eslint": "5.6.0",
-    "eslint-plugin-react": "^7.11.1",
-    "jest": "^23.6.0",
-    "prop-types": "^15.6.2",
-    "react-redux": "^6.0.0",
-    "react-scripts": "^2.1.1",
-    "redux": "^4.0.1",
-    "redux-actions": "^2.6.4",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "eslint-plugin-react": "7.11.1",
+    "jest": "23.6.0",
+    "prop-types": "15.6.2",
+    "react-redux": "6.0.0",
+    "react-scripts": "2.1.1",
+    "redux": "4.0.1",
+    "redux-actions": "2.6.4",
+    "redux-thunk": "2.3.0",
+    "reselect": "4.0.0"
   }
 }
